--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,6 @@
 <header class="site-header">
 
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+  <!--<div class="wrapper">-->
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -14,6 +12,7 @@
       </a>
 
       <div class="trigger">
+        <a class="page-link" href="/">Home</a>
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
@@ -22,6 +21,9 @@
       </div>
     </nav>
 
+  <!-- </div> -->
+
+  <div class="wrapper">
   </div>
 
 </header>
