--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Helvetica";
+    src: url("../assets/fonts/HelveticaNeue.ttf") format("ttf");
+}
+
+
 /**
  * Reset some basic elements
  */
@@ -14,7 +20,8 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    //font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    font: $base-font-weight #{$base-font-size}/#{$base-line-height} "Helvetica";
     color: $text-color;
     //background-color: $background-color;
     -webkit-text-size-adjust: 100%;
@@ -35,6 +42,7 @@ p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
+    font-family: "Helvetica";
 }
 
 
