--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,6 +31,7 @@
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 24px;
+    margin-top: -18px;
     color: #aaa;
     text-align: center;
     border-bottom: 1px solid #eee;
