--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,7 +15,6 @@ dl, dd, ol, ul, figure {
 }
 
 
-
 /**
  * Basic styling
  */
@@ -30,6 +29,7 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
+    direction: rtl;
 }
 
 
