--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,8 +16,6 @@
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
-    text-align: center;
-    // float: left;
 
     &,
     &:visited {
@@ -26,15 +24,12 @@
 }
 
 .site-subtitle {
-    font-size: 21px;
     font-weight: 300;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 24px;
     margin-top: -18px;
     color: #aaa;
-    text-align: center;
-    border-bottom: 1px solid #eee;
 }
 
 .site-nav {
@@ -192,7 +187,8 @@
 }
 
 .post-list {
-    margin-left: 0;
+    margin-right: 0;
+    float: right;
     list-style: none;
 
     > li {
@@ -203,7 +199,7 @@
 .post-meta {
     font-size: $small-font-size;
     color: $grey-color;
-    float: right;
+    float: left;
 }
 
 .post-summary {
@@ -316,5 +312,14 @@
     p {
         margin-top: -12px !important;
         font-size: 14px;
+    }
+}
+
+.nav-stacked {
+    float: left;
+    text-align: left;
+    
+    li a {
+        color: #666;
     }
 }
