--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,24 @@
-<div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-        <h1 class="site-title">{{ site.title }}</h1>
-        <h4 class="site-subtitle">{{ site.subtitle }}</h4>
+<header>
+  <div class="slope">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-8">
+          <h1 class="site-title"><a href="/">{{ site.title }}</a></h1>
+        </div>
+        <div class="col-xs-4">
+          <ul class="social-list">
+              <li><a href="http://linkedin.com/in/eslammostafa" target="_blank"><span class="fa fa-fw fa-lg fa-linkedin"></span></a></li>
+              <li><a href="http://github.com/eslammostafa" target="_blank"><span class="fa fa-fw fa-lg fa-github-alt"></span></a></li>
+              <li><a href="http://twitter.com/thedvlpr" target="_blank"><span class="fa fa-fw fa-lg fa-twitter"></span></a></li>
+              <li><a href="mailto:cseslam@gmail.com" target="_blank"><span class="fa fa-fw fa-lg fa-envelope"></span></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="site-subtitle">{{ site.description }}</p>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+</header>
