--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,16 @@
-<footer class="site-footer">
-
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <!-- <p>{{ site.description }}</p> --> 
+<footer>
+  <div class="slope">
+    <div class="container">
+      <div class="row">
+        <div class="text-center">
+          <ul class="social-list">
+              <li><a href="#" target="_blank"><span class="fa fa-fw fa-lg fa-linkedin"></span></a></li>
+              <li><a href="#" target="_blank"><span class="fa fa-fw fa-lg fa-github-alt"></span></a></li>
+              <li><a href="#" target="_blank"><span class="fa fa-fw fa-lg fa-twitter"></span></a></li>
+              <li><a href="#" target="_blank"><span class="fa fa-fw fa-lg fa-envelope"></span></a></li>
+          </ul>
+        </div>
       </div>
     </div>
-
   </div>
-
 </footer>
