--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
               <li><a href="http://linkedin.com/in/eslammostafa" target="_blank"><span class="fa fa-fw fa-lg fa-linkedin"></span></a></li>
               <li><a href="http://github.com/eslammostafa" target="_blank"><span class="fa fa-fw fa-lg fa-github-alt"></span></a></li>
               <li><a href="http://twitter.com/thedvlpr" target="_blank"><span class="fa fa-fw fa-lg fa-twitter"></span></a></li>
+              <li><a href="http://medium.com/eslammostafa" target="_blank"><span class="fa fa-fw fa-lg fa-medium"></span></a></li>
               <li><a href="mailto:cseslam@gmail.com" target="_blank"><span class="fa fa-fw fa-lg fa-envelope"></span></a></li>
           </ul>
         </div>
