--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
 <header>
-  <div class="slope">
     <div class="container">
       <div class="row">
         <div class="col-xs-8">
@@ -16,10 +15,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <p class="site-subtitle">{{ site.description }}</p>
+        <div class="col-xs-4">
+            <!-- <p class="site-subtitle">{{ site.description }}</p> -->
+          <p class="site-subtitle">{{ site.subtitle }}</p>
         </div>
       </div>
-    </div>
   </div>
 </header>
