--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 
   {% include head.html %}
 
   {% include header.html %}
 
   <body>
-    {{ content }}
+                  {{ content }}
   </body>
 
   <!-- {% include footer.html %} -->
