--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Helvetica";
+    src: url("../assets/fonts/HelveticaNeue.ttf") format("ttf");
+}
+
 /**
  * Site header
  */
@@ -165,8 +170,8 @@
 }
 
 .post-list {
-    margin-right: 0;
-    float: right;
+    margin-left: 0;
+    float: left;
     list-style: none;
 
     > li {
@@ -252,8 +257,8 @@
     margin-bottom: 24px;
 }
 .skill {
-    width: 128px;
-    height: 128px;
+    width: 64px;
+    height: 64px;
     margin-right: 16px;
     margin-bottom: 64px;
 }
@@ -297,11 +302,17 @@
 }
 
 .nav-stacked {
-    float: left;
-    text-align: left;
+    float: right;
+    text-align: right;
 
     li a {
-        color: #666;
+        font-family: "Helvetica";
+        color: #afafaf;
+    }
+
+    li a:hover {
+        background: none !important;
+        color: #4c5c96 !important;
     }
 }
 
@@ -311,11 +322,11 @@ header {
     z-index: 1;
     width: 100%;
     display: block;
-    margin-bottom: 60px;
+    margin-bottom: 24px;
     overflow: hidden;
 
     .site-title a {
-      color: #fff;
+      color: #4c5c96;
       font-size: 26px;
       font-weight: 300;
       letter-spacing: -1px;
@@ -326,7 +337,7 @@ header {
     }
 
     .site-subtitle {
-      color: #eee;
+      color: #999;
     }
 }
 
@@ -335,19 +346,17 @@ header {
     background-color: #4c5c96;
     // background-color: #F2F1ED;
     transform: rotate(3deg);
-    transform-origin: right center;
+    transform-origin: left center;
 
     .container {
       // padding: 130px;
-      padding: 120px 100px 20px 100px;
       transform: rotate(-3deg);
+      padding: 100px 60px 24px 60px;
     }
 }
 
-header .slope {
-  margin: 0 -50px;
-  margin-top: -100px;
-  // height: 300px;
+.container {
+    width: 960px;
 }
 
 footer {
@@ -366,10 +375,20 @@ footer {
   }
   li a {
     // color: rgba(255,255,255,0.5);
-    color: rgba(255,255,255,0.5);
+    color: #7887BF;
   }
 
   li a:hover {
-    color: #ddd;
+    color: #4c5c96;
   }
+}
+
+.page-breaker {
+    padding: 24px 0 8px 0;
+    background-color: #4c5c96;
+    margin-bottom: 24px;
+}
+
+.title {
+    color: #fff;
 }
