--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,10 +8,11 @@
 </ul>-->
 
 <ul class="nav nav-pills nav-stacked">
-    <li><a class="active" href="/">المدونة</a></li>
-    <li><a class="active" href="/experience">الخبرات</a></li>
-    <li><a class="active" href="/projects">المشاريع</a></li>
-    <li><a class="active" href="/hireme">وظفني</a></li>
+    <li><a href="/blog">Blog</a></li>
+    <li><a href="/tech">Technology</a></li>
+    <li><a href="/experience">Experience</a></li>
+    <li><a href="/projects">Projects</a></li>
     <br />
-    <li><a class="active" href="/about">من انا؟</a></li>
+    <li><a href="/hireme">Hire me?</a></li>
+    <li><a class="active" href="/about">About</a></li>
 </ul>
