--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,43 @@
-<header>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-8">
-          <h1 class="site-title"><a href="/">{{ site.title }}</a></h1>
-        </div>
-        <div class="col-xs-4">
-          <ul class="social-list">
-              <li><a href="http://linkedin.com/in/eslammostafa" target="_blank"><span class="fa fa-fw fa-lg fa-linkedin"></span></a></li>
-              <li><a href="http://github.com/eslammostafa" target="_blank"><span class="fa fa-fw fa-lg fa-github-alt"></span></a></li>
-              <li><a href="http://twitter.com/thedvlpr" target="_blank"><span class="fa fa-fw fa-lg fa-twitter"></span></a></li>
-              <li><a href="http://medium.com/@eslammostafa" target="_blank"><span class="fa fa-fw fa-lg fa-medium"></span></a></li>
-              <li><a href="mailto:cseslam@gmail.com" target="_blank"><span class="fa fa-fw fa-lg fa-envelope"></span></a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-4">
-            <!-- <p class="site-subtitle">{{ site.description }}</p> -->
-          <p class="site-subtitle">{{ site.subtitle }}</p>
-        </div>
-      </div>
-  </div>
-</header>
+<nav class="navbar navbar-default navbar-custom">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Eslam Mostafa</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+          <li><a href="/blog" title="blog">Blog</a></li>
+          <li><a href="/projects" title="projects">Projects</a></li>
+          <li><a href="/experience" title="experience">Experience</a></li>
+          <!-- <li><a href="/testimonials" title="testimonials">Testimonials</a></li> -->
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+          <li><a href="http://linkedin.com/in/eslammostafa" target="_blank"><span class="fa fa-linkedin"></span></a></li>
+          <li><a href="http://github.com/eslammostafa" target="_blank"><span class="fa fa-github-alt"></span></a></li>
+          <li><a href="http://twitter.com/thedvlpr" target="_blank"><span class="fa fa-twitter"></span></a></li>
+          <li><a href="http://medium.com/@eslammostafa" target="_blank"><span class="fa fa-medium"></span></a></li>
+          <li><a href="mailto:cseslam@gmail.com" target="_blank"><span class="fa fa-envelope"></span></a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+<script type="text/javascript">
+function showLabel(item) {
+    document.getElementById(item).classList.remove('hidden');
+}
+function hideLabel(item){
+    alert('leave');
+    document.getElementById(item).classList.add('hidden');
+}
+</script>
