--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,9 +3,13 @@ layout: default
 ---
 <article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  <div class="container">
+      <div class="row">
+          <div class="col-xs-12">
+              <h1 class="post-title">{{ page.title }}</h1>
+          </div>
+      </div>
+  </div>
 
   <div class="post-content">
     {{ content }}
