--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,7 +22,7 @@ body {
     //font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} "Helvetica";
     color: $text-color;
-    //background-color: $background-color;
+    background-color: #efefef;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
     -moz-font-feature-settings: "kern" 1;
